<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inventory_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tnmoc.storageinventory.Inventory$PlaceholderFragment" >

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/clear_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="onClear"
            android:text="@string/button_clear_field" />

        <Button
            android:id="@+id/scan_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical|center_horizontal"
            android:minWidth="44dp"
            android:onClick="onScan"
            android:text="@string/button_scan" />

        <Button
            android:id="@+id/save_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical|center_horizontal"
            android:minWidth="44dp"
            android:onClick="onSave"
            android:text="@string/button_save" />
    </LinearLayout>

            <TextView
                android:id="@+id/locationFieldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_field_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <AutoCompleteTextView
                    android:id="@+id/locationSpinner"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Location ID" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lotFieldLabel" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/lotField"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/lot_hint"
                        android:inputType="text" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/objectFieldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/verticalFieldSpacing"
                android:text="@string/objectFieldLabel" />
      
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <EditText
                    android:id="@+id/objectField"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/object_hint"
                    android:inputType="text" />

            </LinearLayout>

            <SlidingDrawer
                android:id="@+id/slidingDrawer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:content="@+id/drawer_content"
                android:handle="@+id/handle" >

                <Button
                    android:id="@+id/handle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Handle" />

                <LinearLayout
                    android:id="@+id/drawer_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ScrollView
                        android:id="@+id/scrollView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TableLayout
                            android:id="@+id/history_table"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >
                        </TableLayout>

                    </ScrollView>

                </LinearLayout>
            </SlidingDrawer>
    
</LinearLayout>
